# event-processing-pipeline

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  command.json  command.txt  dockerfile  main.cpp  test.cpp
.github/workflows/: deploy.yaml
Enums/: Enums.hpp
ExchangeType/: CMakeLists.txt  ExchangeType.cpp  ExchangeType.hpp
FilterClass/: CMakeLists.txt  FilterClass.cpp  FilterClass.hpp  struct.hpp
Instrument/: CMakeLists.txt  Instrument.hpp  InstrumentFactory.hpp
Instrument/Equity/: Equity.cpp  Equity.hpp
Instrument/Future/: Future.cpp  Future.hpp
Instrument/Option/: Option.cpp  Option.hpp
aws/http/: response.h
aws/lambda-runtime/: outcome.h  runtime.h
environment/: lambda.hpp  local.hpp  processworkflow.hpp
gzip/: CMakeLists.txt  GzipJson.cpp  GzipJson.hpp
macro/: logger.hpp
namespace/: data.hpp  env.hpp  equity.hpp  future.hpp
other/: header.hpp  main.cpp
other/future/: future.cpp  future.hpp
other/option/: option.cpp  option.hpp
post/: post.cpp
postJson/: postJson.cpp  postJson.hpp
process/: process.cpp  process.hpp
utils/: CMakeLists.txt  gzip_json.cpp  gzip_json.hpp
workflow/: workflow.cpp  workflow.hpp
